CRUD operations implemented.